fixed layout issues for mobile

--- a/main.css
+++ b/main.css
@@ -11,6 +11,7 @@ body {
   font-size: 16px;
   line-height: 28px;
   color: #747b95;
+  background-color: #fafafa;
 }
 
 .container {
@@ -56,8 +57,6 @@ nav {
 }
 
 #illustration {
-  display: inline-block;
-  justify-self: center;
   width: 171px;
   height: 192px;
   margin-bottom: 36px;
@@ -69,12 +68,11 @@ nav {
   flex-direction: column;
   width: 327px;
   height: 378px;
-  margin-bottom: 100px;
+  margin: 0 auto 100px;
 }
 
 .button-1 {
   white-space: nowrap;
-  justify-self: center;
   background-color: #5175ff;
   border-radius: 28px;
   color: white;
@@ -86,15 +84,58 @@ nav {
   box-shadow: 0px 25px 25px -10px rgba(63, 91, 194, 0.247159);
   width: 171px;
   height: 56px;
+  margin: 0 auto;
 }
 
 .button-1:hover {
   background-color: #829cff;
 }
 
+.button-2 {
+  white-space: nowrap;
+  background-color: rgba(81, 117, 255, 0.15);
+  mix-blend-mode: normal;
+  border-radius: 28px;
+  color: rgba(81, 117, 255);
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-style: none;
+  width: 171px;
+  height: 56px;
+}
+
+.button-2:hover {
+  background-color: rgba(81, 117, 255, 0.25);
+}
+
+.button-3 {
+  white-space: nowrap;
+  background-color: white;
+  mix-blend-mode: normal;
+  border-radius: 28px;
+  color: rgba(81, 117, 255);
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-style: none;
+  width: 171px;
+  height: 56px;
+}
+
+.button-3:hover {
+  color: #829cff;
+}
+
 .card-heading {
-  font-size: 56px;
-  color: #333950;
+  font-family: Kumbh Sans;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 28px;
+  margin: 40px 0 40px 0;
 }
 
 .pricing-cards {
@@ -104,17 +145,36 @@ nav {
   height: 1588px;
 }
 
+.card-price {
+  font-weight: bold;
+  font-size: 56px;
+  line-height: 64px;
+}
+
 .card {
+  display: flex;
+  flex-direction: column;
   width: 327px;
   height: 508px;
   box-shadow: 0px 50px 50px -25px rgba(75, 92, 154, 0.247159);
   border-radius: 13px;
+  margin: auto;
 }
 
 .blue-card {
   background-color: #5175ff;
+  color: white;
 }
 
 .white-card {
+  color: #333950;
   background-color: white;
+}
+
+.card-paragraph {
+  margin: 56px 0 32px 0;
+  height: 116px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
